tests/baselines/reference/typeIdentityConsidersBrands.errors.txt
typeIdentityConsidersBrands.ts(2,7): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
typeIdentityConsidersBrands.ts(6,7): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
typeIdentityConsidersBrands.ts(10,13): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
typeIdentityConsidersBrands.ts(14,13): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
typeIdentityConsidersBrands.ts(30,1): error TS2322: Type 'X_1' is not assignable to type 'Y_1'.
  Types have separate declarations of a private property 'name'.
typeIdentityConsidersBrands.ts(31,6): error TS2345: Argument of type 'Y_1' is not assignable to parameter of type 'X_1'.
  Types have separate declarations of a private property 'name'.


==== typeIdentityConsidersBrands.ts (6 errors) ====
    class X{
          name: string;
          ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Y{
          name: string;
          ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class X_1 {
        private name: string;
                ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Y_1 {
        private name: string;
                ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    function foo(arg: X){}
     
    var a = new Y();
    var b = new X();
     
    a = b; // ok
    foo(a); // ok
    
    var a2 = new Y_1();
    var b2 = new X_1();
    
    function foo2(arg: X_1) { }
    
    a2 = b2; // should error
    ~~
!!! error TS2322: Type 'X_1' is not assignable to type 'Y_1'.
!!! error TS2322:   Types have separate declarations of a private property 'name'.
    foo2(a2); // should error
         ~~
!!! error TS2345: Argument of type 'Y_1' is not assignable to parameter of type 'X_1'.
!!! error TS2345:   Types have separate declarations of a private property 'name'.
    